<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutUsFragment"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aboutus_uno"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aboutus_dos"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aboutus_tres"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aboutus_cuatro"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>