<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemList_LinearLayout_Parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ItemList_ImageView_ImagenDelProducto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_item_list"
            android:src="@drawable/pc_gamer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_toRightOf="@id/ItemList_ImageView_ImagenDelProducto">

            <TextView
                android:id="@+id/ItemList_TextView_NombreDelProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_producto_item_list"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ItemList_TextView_PrecioDelProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/precio_item_list"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

</LinearLayout>