<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="600dp"
    android:background="@drawable/border_description_product"
    android:orientation="vertical"
    tools:context=".View.Fragment.DescriptionProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_description_product">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorGray"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/DescriptionProductFragment_ImageView_ImagenDelProducto"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/imagen_del_producto"
                android:scaleType="centerCrop"
                android:src="@drawable/reloj_rolex" />

            <TextView
                android:id="@+id/DescriptionProductFragment_TextView_NombreDelProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/reloj_rolex_de_oro"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/DescriptionProductFragment_TextView_PrecioDelProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/_45000"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>